--- a/index.html
+++ b/index.html
@@ -120,19 +120,19 @@
           <div class="tiny-slider-three">
             <!-- Single Hero Slide -->
             <div>
-              <div class="single-hero-slide bg-img" style="background-image: url('img/bg-img/webdev60.png');height:250px">
+              <div class="single-hero-slide bg-img" style="background-image: url('img/bg-img/webdev60.png')">
                 <div class="slide-content"></div>
               </div>
             </div>
             <!-- Single Hero Slide -->
             <div>
-              <div class="single-hero-slide bg-img" style="background-image: url('img/bg-img/webdev.png');height:250px">
+              <div class="single-hero-slide bg-img" style="background-image: url('img/bg-img/webdev.png')">
                 <div class="slide-content"></div>
               </div>
             </div>
             <!-- Single Hero Slide -->
             <div>
-              <div class="single-hero-slide bg-img" style="background-image: url('img/bg-img/webdev12.png');height:250px">
+              <div class="single-hero-slide bg-img" style="background-image: url('img/bg-img/webdev12.png')">
                 <div class="slide-content"></div>
               </div>
             </div>
